# LoLDamageCalc

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO
calculator_engine/: CMakeLists.txt  damage.cpp  damage.h  environment.cpp  environment.h
calculator_engine/champions/: Attacker_Champion.cpp  Attacker_Champion.h  Base_Champion.cpp  Base_Champion.h  CMakeLists.txt  Defender_Champion.cpp  Defender_Champion.h  Generic_Damage_Spell.cpp  Generic_Damage_Spell.h  Stats.hpp
calculator_engine/champions/include/: Jinx.h  Rammus.h
calculator_engine/champions/src/: Jinx.cpp  Rammus.cpp
calculator_engine/champions/stat_json/: GenericChamp.json  Jinx.json  Rammus.json
calculator_engine/engine_signal_system/: CMakeLists.txt  engine_signal_system.hpp
calculator_engine/items/: Attacker_Items.cpp  Attacker_Items.h  CMakeLists.txt  Defender_Items.cpp  Defender_Items.h
calculator_engine/runes/: Attacker_Runes.cpp  Attacker_Runes.h  Defender_Runes.cpp  Defender_Runes.h
cmd_interface/: CMakeLists.txt  main.cpp
common_lib_c/: CMakeLists.txt
test_tools/: CMakeLists.txt  main.cpp
